final build- GULP boilerplate code

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,6 +1,8 @@
 
 .maindiv{
-  height: 100px;
-  width:100px;
-  background-color: red;
+  height: 200px;
+  width:900px;
+  background-color: gold;
+  border:1px dotted gray;
+  border-radius: 5px;
 }
