--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,8 +1,183 @@
+//*******************************Variables***********************
+$font-stack:    Segoe UI;
+$primary-text: darkgoldenrod;
+$nav-underline-color: goldenrod;
+//***************************************************************
 
 .maindiv{
   height: 200px;
   width:900px;
-  background-color: gold;
+  background-color: goldenrod;
   border:1px dotted gray;
   border-radius: 5px;
 }
+html, body {
+  height: 4000px;
+}
+
+
+
+#body_div {
+  height: 200px;
+  background-color: green;
+  margin-top: 30px;
+}
+
+#banner {
+  width: 100%;
+  height: 200px;
+}
+
+.brand_logo{
+  height:200px;
+}
+.brand_logo_min{
+  height:50px;
+  position: absolute;
+}
+#brand_logo_minimized{
+  transition: .3s ease-in-out;
+}
+.nav_links {
+  margin: 0;
+}
+
+.nav_links li {
+  display: inline-block;
+  margin-top: 4px;
+}
+.nav_links li a {
+  padding: 0 15.5px;
+  color: #3498db;
+  text-decoration: none;
+}
+
+//******************NAVBAR**************************
+.rrnavbar {
+  width: 100%;
+  margin: 0 auto;
+  background-color: white;
+  //transition: .3s ease-in-out;
+}
+.rrnavbar-fixed {
+  top: 0;
+  z-index: 100;
+  position: fixed;
+  width: 100%;
+  //transition: .3s ease-in-out;
+}
+
+@media (min-width: 768px) {
+  #floatingline{
+    visibility: visible !important;
+  }
+  #selectedMenu{
+    font-family: $font-stack;
+    font-weight: bold;
+    color: $primary-text;
+    display: inline-block;
+    width: 10%;
+    padding: .75rem 0;
+    margin: 0;
+    text-decoration: none;
+    visibility: hidden !important;
+  }
+}
+
+.rrnavbar ul li {
+  display: inline;
+  text-align: center;
+  cursor: pointer;
+}
+
+@media (max-width: 768px) {
+  #floatingline{
+    visibility: hidden !important;
+  }
+  .rrnavbar ul li {
+    display: block;
+    text-align: center;
+    cursor: pointer;
+  }
+}
+#selectedMenu{
+  font-family: $font-stack;
+  font-weight: bold;
+  color: $primary-text;
+  display: inline-block;
+  width: 10%;
+  padding: .75rem 0;
+  margin: 0;
+  text-decoration: none;
+  visibility: visible;
+}
+
+.rrnavbar ul li span{
+  font-family: $font-stack;
+  font-weight: bold;
+  color: $primary-text;
+  display: inline-block;
+  width: 10%;
+  padding: .75rem 0;
+  margin: 0;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.rr-margin-left-20{
+  margin-left: 20% !important;
+}
+.rr-margin-left-30{
+  margin-left: 30% !important;
+}
+.rr-margin-left-40{
+  margin-left: 40% !important;
+}
+.rr-margin-left-50{
+  margin-left: 50% !important;
+}
+.rr-margin-left-60{
+  margin-left: 60% !important;
+}
+.rr-margin-left-70{
+  margin-left: 70% !important;
+}
+
+
+.item1:hover ~ hr{
+  @extend .rr-margin-left-20;
+}
+
+.item2:hover ~ hr {
+  @extend .rr-margin-left-30;
+}
+
+.item3:hover ~ hr {
+  @extend .rr-margin-left-40;
+}
+
+.item4:hover ~ hr {
+  @extend .rr-margin-left-50;
+}
+.item5:hover ~ hr {
+  @extend .rr-margin-left-60;
+}
+.item6:hover ~ hr {
+  @extend .rr-margin-left-70;
+}
+.rrnavbar hr {
+  height: .25rem;
+  width: 10%;
+  margin: 0;
+  background: $nav-underline-color;
+  border: none;
+  transition: .3s ease-in-out;
+  margin-left: 20%;
+}
+
+.goldline{
+  height: 1px;
+  width:100%;
+  background-color: $nav-underline-color;
+}
+///*********************NAVBAR END*************************/
