--- a/app/src/home/views/home.html
+++ b/app/src/home/views/home.html
@@ -2,4 +2,9 @@
     Home page
     <span>{{pageData}}</span>
 
+    <div class="bestoffersdiv">
+        <h2>Test Head</h2>
+        <span>Test div home page</span>
+    </div>
+
 </div>
