--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -15,6 +15,7 @@ $rr-gold-light: gold;
   border-radius: 5px;
 }
 html, body {
+  font-family: $font-stack;
   height: 4000px;
 }
 
@@ -22,7 +23,7 @@ html, body {
 
 #body_div {
   height: 200px;
-  background-color: white;
+  background-color: transparent;
   margin-top: 30px;
 }
 
@@ -32,8 +33,9 @@ html, body {
 }
 
 .brand_logo{
-  height:200px;
+  height:150px;
 }
+
 .brand_logo_min{
   height:50px;
   position: absolute;
@@ -56,12 +58,51 @@ html, body {
 }
 
 //******************NAVBAR**************************
+
+#menuButton{
+  border: 1px solid $rr-gold;
+  background-color: transparent;
+  span{
+    background-color: $rr-gold-dark;
+  }
+}
+#menuButton:hover{
+  background-color: $rr-gold-light;
+}
+
 .rrnavbar {
   width: 100%;
   margin: 0 auto;
   background-color: white;
   border: transparent;
   transition: .3s ease-in-out;
+
+  ul li {
+    display: inline;
+    text-align: center;
+    cursor: pointer;
+
+    span {
+      font-family: $font-stack;
+      font-weight: bold;
+      color: $primary-text;
+      display: inline-block;
+      width: 10%;
+      padding: .75rem 0;
+      margin: 0;
+      text-decoration: none;
+      cursor: pointer;
+    }
+  }
+  #floatingline {
+    height: .25rem;
+    width: 10%;
+    margin: 0;
+    background: $nav-underline-color;
+    border: none;
+    transition: .3s ease-in-out;
+    margin-left: 20%;
+  }
 }
 .rrnavbar-fixed {
   top: 0;
@@ -87,12 +128,32 @@ html, body {
     visibility: hidden !important;
   }
 }
-
-.rrnavbar ul li {
-  display: inline;
-  text-align: center;
-  cursor: pointer;
-}
+//
+//.rrnavbar ul li {
+//  display: inline;
+//  text-align: center;
+//  cursor: pointer;
+//}
+//.rrnavbar ul li span{
+//  font-family: $font-stack;
+//  font-weight: bold;
+//  color: $primary-text;
+//  display: inline-block;
+//  width: 10%;
+//  padding: .75rem 0;
+//  margin: 0;
+//  text-decoration: none;
+//  cursor: pointer;
+//}
+//.rrnavbar hr {
+//  height: .25rem;
+//  width: 10%;
+//  margin: 0;
+//  background: $nav-underline-color;
+//  border: none;
+//  transition: .3s ease-in-out;
+//  margin-left: 20%;
+//}
 
 #menuButton{
   color: $rr-gold-light;
@@ -121,17 +182,7 @@ html, body {
   visibility: visible;
 }
 
-.rrnavbar ul li span{
-  font-family: $font-stack;
-  font-weight: bold;
-  color: $primary-text;
-  display: inline-block;
-  width: 10%;
-  padding: .75rem 0;
-  margin: 0;
-  text-decoration: none;
-  cursor: pointer;
-}
+
 
 .rr-margin-left-20{
   margin-left: 20% !important;
@@ -153,35 +204,26 @@ html, body {
 }
 
 
-.item1:hover ~ hr{
+.item1:hover ~ #floatingline{
   @extend .rr-margin-left-20;
 }
 
-.item2:hover ~ hr {
+.item2:hover ~ #floatingline {
   @extend .rr-margin-left-30;
 }
 
-.item3:hover ~ hr {
+.item3:hover ~ #floatingline {
   @extend .rr-margin-left-40;
 }
 
-.item4:hover ~ hr {
+.item4:hover ~ #floatingline {
   @extend .rr-margin-left-50;
 }
-.item5:hover ~ hr {
+.item5:hover ~ #floatingline {
   @extend .rr-margin-left-60;
 }
-.item6:hover ~ hr {
+.item6:hover ~ #floatingline {
   @extend .rr-margin-left-70;
-}
-.rrnavbar hr {
-  height: .25rem;
-  width: 10%;
-  margin: 0;
-  background: $nav-underline-color;
-  border: none;
-  transition: .3s ease-in-out;
-  margin-left: 20%;
 }
 
 .goldline{
@@ -190,3 +232,4 @@ html, body {
   background-color: $nav-underline-color;
 }
 ///*********************NAVBAR END*************************/
+
