--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,1 +1,256 @@
-.maindiv{height:200px;width:900px;background-color:goldenrod;border:1px dotted gray;border-radius:5px}html,body{font-family:Segoe UI;height:4000px}#body_div{height:200px;background-color:transparent;margin-top:30px}#banner{width:100%;height:200px}.brand_logo{height:150px}.brand_logo_min{height:50px;position:absolute}#brand_logo_minimized{transition:.3s ease-in-out}.nav_links{margin:0}.nav_links li{display:inline-block;margin-top:4px}.nav_links li a{padding:0 15.5px;color:#3498db;text-decoration:none}#menuButton{border:1px solid #daa520;background-color:transparent}#menuButton span{background-color:#b8860b}#menuButton:hover{background-color:gold}.rrnavbar{width:100%;margin:0 auto;background-color:white;border:transparent;transition:.3s ease-in-out}.rrnavbar ul li{display:inline;text-align:center;cursor:pointer}.rrnavbar ul li span{font-family:Segoe UI;font-weight:bold;color:#b8860b;display:inline-block;width:10%;padding:.75rem 0;margin:0;text-decoration:none;cursor:pointer}.rrnavbar #floatingline{height:.25rem;width:10%;margin:0;background:#daa520;border:none;transition:.3s ease-in-out;margin-left:20%}.rrnavbar-fixed{top:0;z-index:100;position:fixed;width:100%}@media (min-width: 768px){#floatingline{visibility:visible !important}#selectedMenu{font-family:Segoe UI;font-weight:bold;color:#b8860b;display:inline-block;width:10%;padding:.75rem 0;margin:0;text-decoration:none;visibility:hidden !important}}#menuButton{color:gold}@media (max-width: 768px){#floatingline{visibility:hidden !important}.rrnavbar ul li{display:block;text-align:center;cursor:pointer}}#selectedMenu{font-family:Segoe UI;font-weight:bold;color:#b8860b;display:inline-block;width:10%;padding:.75rem 0;margin:0;text-decoration:none;visibility:visible}.rr-margin-left-20,.item1:hover ~ #floatingline{margin-left:20% !important}.rr-margin-left-30,.item2:hover ~ #floatingline{margin-left:30% !important}.rr-margin-left-40,.item3:hover ~ #floatingline{margin-left:40% !important}.rr-margin-left-50,.item4:hover ~ #floatingline{margin-left:50% !important}.rr-margin-left-60,.item5:hover ~ #floatingline{margin-left:60% !important}.rr-margin-left-70,.item6:hover ~ #floatingline{margin-left:70% !important}.goldline{height:1px;width:100%;background-color:#daa520}
+.maketextgold, .homesection1 #storyhead {
+  color: #D5AD6D;
+  /*if no support for background-clip*/
+  background: -webkit-linear-gradient(transparent, transparent), -webkit-linear-gradient(top, #d5ad6d 0%, #d5ad6d 26%, #e2ba78 35%, #a37e43 45%, #91703b 61%, #d5ad6d 100%);
+  background: -o-linear-gradient(transparent, transparent);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.homesection1 #storyhead {
+  font-size: x-large;
+}
+.homesection1 #storyhead4 {
+  color: #926318;
+  font-size: medium;
+}
+
+.contents3col h3 {
+  color: darkgoldenrod;
+  float: left;
+  text-align: left;
+  font-size: x-large;
+}
+.contents3col h4 {
+  line-height: 1.5;
+  color: #926318;
+  float: left;
+  text-align: left;
+  font-size: large;
+}
+
+.carousel-caption h5 {
+  font-size: small;
+}
+
+.upadevatasdiv {
+  background-color: antiquewhite;
+}
+.upadevatasdiv h3 {
+  font-size: x-large;
+  color: darkgoldenrod;
+}
+.upadevatasdiv h4 {
+  font-size: large;
+  color: #926318;
+}
+.upadevatasdiv .panel {
+  background-color: transparent !important;
+}
+.upadevatasdiv .panel-body {
+  background-color: transparent !important;
+}
+.upadevatasdiv .panel-body i {
+  color: #926318;
+}
+.upadevatasdiv .panel-body h3 {
+  font-size: x-large;
+  color: #926318;
+}
+.upadevatasdiv .panel-body hr {
+  border-bottom: 1px solid darkgoldenrod;
+  width: 50%;
+}
+.upadevatasdiv .panel-body p {
+  font-size: large;
+  color: #926318;
+}
+
+.maindiv {
+  height: 200px;
+  width: 900px;
+  background-color: goldenrod;
+  border: 1px dotted gray;
+  border-radius: 5px;
+}
+
+html, body {
+  height: auto;
+}
+
+.whiteText {
+  color: white;
+}
+
+.blackText {
+  color: black;
+}
+
+#body_div {
+  height: 200px;
+  background-color: transparent;
+  margin-top: 30px;
+}
+
+#banner {
+  width: 100%;
+  height: 200px;
+}
+
+.brand_logo {
+  height: 150px;
+}
+
+.brand_logo_min {
+  height: 50px;
+  position: absolute;
+}
+
+#brand_logo_minimized {
+  transition: .3s ease-in-out;
+}
+
+.nav_links {
+  margin: 0;
+}
+
+.nav_links li {
+  display: inline-block;
+  margin-top: 4px;
+}
+
+.nav_links li a {
+  padding: 0 15.5px;
+  color: #3498db;
+  text-decoration: none;
+}
+
+#menuButton {
+  border: 1px solid goldenrod;
+  background-color: transparent;
+}
+#menuButton span {
+  background-color: darkgoldenrod;
+}
+
+#menuButton:hover {
+  background-color: gold;
+}
+
+.rrnavbar {
+  width: 100%;
+  margin: 0 auto;
+  background-color: white;
+  border: transparent;
+  transition: .3s ease-in-out;
+}
+.rrnavbar ul li {
+  display: inline;
+  text-align: center;
+  cursor: pointer;
+}
+.rrnavbar ul li span {
+  font-family: "Roboto", sans-serif;
+  font-weight: bold;
+  color: darkgoldenrod;
+  display: inline-block;
+  width: 10%;
+  padding: .75rem 0;
+  margin: 0;
+  text-decoration: none;
+  cursor: pointer;
+}
+.rrnavbar #floatingline {
+  height: .25rem;
+  width: 10%;
+  margin: 0;
+  background: goldenrod;
+  border: none;
+  transition: .3s ease-in-out;
+  margin-left: 20%;
+}
+
+.rrnavbar-fixed {
+  top: 0;
+  z-index: 100;
+  position: fixed;
+  width: 100%;
+}
+
+@media (min-width: 768px) {
+  #floatingline {
+    visibility: visible !important;
+  }
+
+  #selectedMenu {
+    font-family: "Roboto", sans-serif;
+    font-weight: bold;
+    color: darkgoldenrod;
+    display: inline-block;
+    width: 10%;
+    padding: .75rem 0;
+    margin: 0;
+    text-decoration: none;
+    visibility: hidden !important;
+  }
+}
+#menuButton {
+  color: gold;
+}
+
+@media (max-width: 768px) {
+  #floatingline {
+    visibility: hidden !important;
+  }
+
+  .rrnavbar ul li {
+    display: block;
+    text-align: center;
+    cursor: pointer;
+  }
+}
+#selectedMenu {
+  font-family: "Roboto", sans-serif;
+  font-weight: bold;
+  color: darkgoldenrod;
+  display: inline-block;
+  width: 10%;
+  padding: .75rem 0;
+  margin: 0;
+  text-decoration: none;
+  visibility: visible;
+}
+
+.rr-margin-left-20, .item1:hover ~ #floatingline {
+  margin-left: 20% !important;
+}
+
+.rr-margin-left-30, .item2:hover ~ #floatingline {
+  margin-left: 30% !important;
+}
+
+.rr-margin-left-40, .item3:hover ~ #floatingline {
+  margin-left: 40% !important;
+}
+
+.rr-margin-left-50, .item4:hover ~ #floatingline {
+  margin-left: 50% !important;
+}
+
+.rr-margin-left-60, .item5:hover ~ #floatingline {
+  margin-left: 60% !important;
+}
+
+.rr-margin-left-70, .item6:hover ~ #floatingline {
+  margin-left: 70% !important;
+}
+
+.goldline {
+  height: 1px;
+  width: 100%;
+  background-color: goldenrod;
+}
+
+.page-footer button {
+  width: 150px;
+}
