--- a/app/src/home/views/home.html
+++ b/app/src/home/views/home.html
@@ -1,10 +1,180 @@
-<div>
-    Home page
-    <span>{{pageData}}</span>
+<style>
+    .item img{
+        height: 300px !important;
+        width: 100%;
+        -webkit-filter: brightness(30%);
+        filter: brightness(30%);
+    }
 
-    <div class="bestoffersdiv">
-        <h2>Test Head</h2>
-        <span>Test div home page</span>
+    .carousel-control i{
+        font-size: 50px;
+        padding-top: 125px;
+    }
+    .slide{
+        overflow:hidden;
+        transition: all 500ms ease;
+        -moz-transition: all 500ms ease;
+        -ms-transition: all 500ms ease;
+        -o-transition: all 500ms ease;
+        -webkit-transition:all 500ms ease;
+    }
+    #historydiv{
+        background-image: url(images/tem.jpg);
+
+        min-height: 500px;
+    }
+    #Yagamdiv{
+        background-image: url(images/yagam.jpg);
+
+        min-height: 500px;
+    }
+
+</style>
+<div class="slide">
+    <div id="myCarousel" class="carousel slide carousel-fade hoverable"   data-ride="carousel" >
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+        </ol>
+
+        <!-- Wrapper for slides -->
+        <div id="rrCarousel" class="carousel-inner  z-depth-2" role="listbox" style="height: 300px;">
+            <div class="item active">
+                <div class="view overlay hm-blue-slight">
+                    <a><img src="images/carousel1.JPG" class="img-responsive" alt="slide1">
+                        <div class="mask waves-effect waves-light"></div>
+                    </a>
+                    <div class="carousel-caption hidden-xs">
+                        <div class="animated fadeInDown">
+                            <h5>Lorem ipsum dolor sit amet</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="item">
+                <div class="view overlay hm-blue-slight">
+                    <a><img src="images/carousel2.JPG" class="img-responsive" alt="Chania">
+                        <div class="mask waves-effect waves-light"></div>
+                    </a>
+                    <div class="carousel-caption hidden-xs">
+                        <div class="animated fadeInDown">
+                            <h5>ELorem There are many variations of passages of Lorem Ipsum available</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="item">
+                <div class="view overlay hm-blue-slight">
+                    <a><img src="images/carousel3.JPG" class="img-responsive" alt="Chania">
+                        <div class="mask waves-effect waves-light"></div>
+                    </a>
+                    <div class="carousel-caption hidden-xs">
+                        <div class="animated fadeInDown">
+                            <h5>Beatiful 3 in Kolymbari, Crete.</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+        <!-- Left and right controls -->
+        <a class="left carousel-control new-control" href="#myCarousel" role="button" data-slide="prev">
+            <span class="fa fa fa-angle-left waves-effect waves-light"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control new-control" href="#myCarousel" role="button" data-slide="next">
+            <span class="fa fa fa-angle-right waves-effect waves-light"></span>
+            <span class="sr-only">Next</span>
+        </a>
     </div>
+
+    <div class="container-fluid text-center homesection1">
+
+        <br>
+
+        <h3 id="storyhead"><b>STORY</b></h3>
+
+        <h4 id="storyhead4">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4>
+        <br>
+
+        <div class="contents3col container">
+            <div class="row">
+                <div class="col-xs-12 col-sm-12 col-md-4">
+                    <h3>Mahathmyam</h3>
+                    <h4>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum"</h4>
+                </div>
+                <div class="col-xs-12 col-sm-12 col-md-4">
+                    <h3>About</h3>
+                    <h4>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first </h4>
+                </div>
+                <div class="col-xs-12 col-sm-12 col-md-4">
+                    <h3>Speciality</h3>
+                    <h4>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</h4>
+                </div>
+            </div>
+        </div>
+
+    </div>
+    <br><br>
+    <section class="parallax" id="historydiv">
+        <div class="container text-center">
+            <h2 style="color: black;">History</h2>
+            <h5>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book</h5>
+            <button type="button" class="btn btn-link" data-target="#historyModal" data-toggle="modal">Read More</button>
+        </div>
+        <div class="modal fade" id="historyModal" role="dialog">
+            <div class="modal-dialog">
+
+                <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">History</h4>
+                    </div>
+                    <div class="modal-body">
+                        <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+    <div class="container-fluid text-center upadevatasdiv">
+        <div class="container" >
+            <br>
+            <h3>UPADEVATAS</h3>
+            <h4>sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</h4>
+            <br>
+            <div ng-repeat="devata in upaDevatas" class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+                <div class="panel-body">
+                    <div class=" img-circle waves-effect waves-orange">
+                        <img ng-src="{{devata.imageSrc}}" class="img-circle" alt="" height="100px" width="100px">
+                    </div>
+                    <h3>{{devata.Name}}</h3>
+                    <hr>
+                    <p >{{devata.text}}</p>
+                </div>
+            </div>
+        </div>
+        <br><br><br>
+    </div>
+
+
+
+    <section class="parallax" id="Yagamdiv">
+        <div class="container text-center">
+           <h2 class="whiteText">Yagam</h2>
+            <h5 class="whiteText">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book</h5>
+            <button style="color: white;" type="button" class="btn btn-link" ui-sref="yagam">Read More</button>
+        </div>
+    </section>
 
 </div>
