added - wow js dependencies and gulp save - viewer Js dependencies and gulp save

--- a/app/src/home/views/home.html
+++ b/app/src/home/views/home.html
@@ -153,7 +153,7 @@
             <h3>UPADEVATAS</h3>
             <h4>sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</h4>
             <br>
-            <div ng-repeat="devata in upaDevatas" class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+            <div ng-repeat="devata in upaDevatas" class="col-xs-12 col-sm-6 col-md-4 col-lg-4 wow fadeInUp">
                 <div class="panel-body">
                     <div class=" img-circle waves-effect waves-orange">
                         <img ng-src="{{devata.imageSrc}}" class="img-circle" alt="" height="100px" width="100px">
