--- a/app/css/style.css
+++ b/app/css/style.css
@@ -218,6 +218,12 @@ html, body {
     text-align: center;
     cursor: pointer;
   }
+
+  .docs-pictures > li {
+    width: 50% !important;
+    border: 1px solid transparent;
+    overflow: hidden;
+  }
 }
 #selectedMenu {
   font-family: "Roboto", sans-serif;
@@ -283,7 +289,7 @@ html, body {
 
 .docs-pictures > li {
   float: left;
-  width: 20%;
+  width: 25%;
   height: 33.3%;
   margin: 0 -1px -1px 0;
   border: 1px solid transparent;
@@ -322,12 +328,17 @@ html, body {
 
 /***********************************VIEWER JS pictures CSS end***********************************/
 .parallax .parallax-content {
-  background-color: whitesmoke;
-  webkit-filter: brightness(20%);
+  background-color: navajowhite;
+  opacity: 0.6;
 }
-.parallax .parallax-content h2 {
+.parallax .parallax-content h3 {
   color: black;
 }
 .parallax .parallax-content h5 {
   color: black;
+}
+
+.transparent-back-white {
+  background-color: white;
+  opacity: 0.8;
 }
