--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -190,6 +190,11 @@ html, body {
     text-align: center;
     cursor: pointer;
   }
+  .docs-pictures > li {
+    width: 50% !important;
+    border: 1px solid transparent;
+    overflow: hidden;
+  }
 }
 #selectedMenu{
   font-family: $font-stack;
@@ -285,7 +290,7 @@ html, body {
 
 .docs-pictures > li {
   float: left;
-  width: 20%;
+  width: 25%;
   height: 33.3%;
   margin: 0 -1px -1px 0;
   border: 1px solid transparent;
@@ -307,6 +312,7 @@ html, body {
   .docs-collapse {
     display: block;
   }
+
 }
 
 .docs-buttons > .btn-group,
