--- a/app/src/home/views/home.html
+++ b/app/src/home/views/home.html
@@ -83,11 +83,11 @@
         </div>
 
         <!-- Left and right controls -->
-        <a class="left carousel-control new-control" href="#myCarousel" role="button" data-slide="prev">
+        <a class="left carousel-control new-control wow fadeInLeft" href="#myCarousel" role="button" data-slide="prev">
             <span class="fa fa fa-angle-left waves-effect waves-light"></span>
             <span class="sr-only">Previous</span>
         </a>
-        <a class="right carousel-control new-control" href="#myCarousel" role="button" data-slide="next">
+        <a class="right carousel-control new-control  wow fadeInRight" href="#myCarousel" role="button" data-slide="next">
             <span class="fa fa fa-angle-right waves-effect waves-light"></span>
             <span class="sr-only">Next</span>
         </a>
@@ -104,15 +104,15 @@
 
         <div class="contents3col container">
             <div class="row">
-                <div class="col-xs-12 col-sm-12 col-md-4">
+                <div class="col-xs-12 col-sm-12 col-md-4 wow fadeInUp">
                     <h3>Mahathmyam</h3>
                     <h4>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum"</h4>
                 </div>
-                <div class="col-xs-12 col-sm-12 col-md-4">
+                <div class="col-xs-12 col-sm-12 col-md-4 wow fadeInUp">
                     <h3>About</h3>
                     <h4>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first </h4>
                 </div>
-                <div class="col-xs-12 col-sm-12 col-md-4">
+                <div class="col-xs-12 col-sm-12 col-md-4 wow fadeInUp">
                     <h3>Speciality</h3>
                     <h4>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</h4>
                 </div>
@@ -121,7 +121,7 @@
 
     </div>
     <br><br>
-    <section class="parallax" id="historydiv">
+    <section class="parallax wow fadeInUp" id="historydiv">
         <div class="container text-center">
             <h2 style="color: black;">DEVI</h2>
             <h5>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book</h5>
@@ -169,7 +169,7 @@
 
 
 
-    <section class="parallax" id="Yagamdiv">
+    <section class="parallax  wow fadeInUp" id="Yagamdiv">
         <div class="container text-center">
            <h2 class="whiteText">Yagam</h2>
             <h5 class="whiteText">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book</h5>
