port to windows

--- a/app/src/poojas/views/poojas.html
+++ b/app/src/poojas/views/poojas.html
@@ -107,10 +107,10 @@
     </div>
     <section class="parallax wow fadeInUp" id="pooja-div-1">
         <div class="parallax-content container-fluid text-center">
-            <h3 class="whiteText">{{poojas[0].header}}</h3>
+            <h3>{{poojas[0].header}}</h3>
             <hr>
             <div class="container">
-                <h5 class="whiteText">{{poojas[0].content}}</h5>
+                <h5>{{poojas[0].content}}</h5>
             </div>
             <br><br>
             <!--<button style="color: black;" type="button" class="btn btn-link">Read More</button>-->
