--- a/app/src/gallery/views/gallery.html
+++ b/app/src/gallery/views/gallery.html
@@ -8,12 +8,14 @@
 <br>
 <div class="container text-center">
     <h3>Gallery</h3>
-    <ul class="docs-pictures clearfix">
-        <li><img  data-original="images/carousel1.JPG" src="images/carousel1.JPG" alt="Cuo Na Lake"></li>
-        <li><img data-original="images/carousel3.JPG" src="images/carousel3.JPG" alt="Tibetan Plateau"></li>
-        <li><img data-original="images/carousel2.JPG" src="images/carousel2.JPG" alt="Jokhang Temple"></li>
-        <li><img data-original="images/carousel3.JPG" src="images/carousel3.JPG" alt="Cuo Na Lake"></li>
-        <li><img data-original="images/carousel1.JPG" src="images/carousel1.JPG" alt="Tibetan Plateau"></li>
-        <li><img data-original="images/carousel2.JPG" src="images/carousel2.JPG" alt="Jokhang Temple"></li>
+    <ul class="wow slideInUp docs-pictures clearfix">
+        <li><img data-original="images/gallery/1.jpg" src="images/gallery/1.jpg" alt="afsafsa"></li>
+        <li><img data-original="images/gallery/2.jpg" src="images/gallery/2.jpg" alt="afsafsa"></li>
+        <li><img data-original="images/gallery/3.jpg" src="images/gallery/3.jpg" alt="afsafsa"></li>
+        <li><img data-original="images/gallery/4.jpg" src="images/gallery/4.jpg" alt="afsafsa"></li>
+        <li><img data-original="images/gallery/5.jpg" src="images/gallery/5.jpg" alt="afsafsa"></li>
+        <li><img data-original="images/gallery/6.jpg" src="images/gallery/6.jpg" alt="afsafsa"></li>
+        <li><img data-original="images/gallery/7.jpg" src="images/gallery/7.jpg" alt="afsafsa"></li>
+        <!--<li ng-repeat="images in galleryImages"><img  data-original='images/gallery/1.jpg' ng-src={{images.imgsrc}} alt={{images.heading}}></li>-->
     </ul>
 </div>
