--- a/app/src/home/views/home.html
+++ b/app/src/home/views/home.html
@@ -1,4 +1,8 @@
 <style>
+    .parallax .container{
+        color: white;
+        text-shadow: 2px 2px black;
+    }
     .item img{
         height: 300px !important;
         width: 100%;
@@ -9,6 +13,9 @@
     .carousel-control i{
         font-size: 50px;
         padding-top: 125px;
+    }
+    .carousel-caption h5{
+        font-size: 20px;
     }
     .slide{
         overflow:hidden;
@@ -37,18 +44,19 @@
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
             <li data-target="#myCarousel" data-slide-to="1"></li>
             <li data-target="#myCarousel" data-slide-to="2"></li>
+            <li data-target="#myCarousel" data-slide-to="3"></li>
         </ol>
 
         <!-- Wrapper for slides -->
         <div id="rrCarousel" class="carousel-inner  z-depth-2" role="listbox" style="height: 300px;">
             <div class="item active">
                 <div class="view overlay hm-blue-slight">
-                    <a><img src="images/carousel1.JPG" class="img-responsive" alt="slide1">
+                    <a><img src="images/carousel1.jpg" class="img-responsive" alt="slide1">
                         <div class="mask waves-effect waves-light"></div>
                     </a>
                     <div class="carousel-caption hidden-xs">
                         <div class="animated fadeInDown">
-                            <h5>Lorem ipsum dolor sit amet</h5>
+                            <h5>Om Sarva Mangala Kalyanyey</h5>
                         </div>
                     </div>
                 </div>
@@ -56,12 +64,12 @@
 
             <div class="item">
                 <div class="view overlay hm-blue-slight">
-                    <a><img src="images/carousel2.JPG" class="img-responsive" alt="Chania">
+                    <a><img src="images/carousel2.jpg" class="img-responsive" alt="Chania">
                         <div class="mask waves-effect waves-light"></div>
                     </a>
                     <div class="carousel-caption hidden-xs">
                         <div class="animated fadeInDown">
-                            <h5>ELorem There are many variations of passages of Lorem Ipsum available</h5>
+                            <h5>Ashta Drishtikey Vishaley Vijaye</h5>
                         </div>
                     </div>
                 </div>
@@ -69,12 +77,25 @@
 
             <div class="item">
                 <div class="view overlay hm-blue-slight">
-                    <a><img src="images/carousel3.JPG" class="img-responsive" alt="Chania">
+                    <a><img src="images/carousel3.jpg" class="img-responsive" alt="Chania">
                         <div class="mask waves-effect waves-light"></div>
                     </a>
                     <div class="carousel-caption hidden-xs">
                         <div class="animated fadeInDown">
-                            <h5>Beatiful 3 in Kolymbari, Crete.</h5>
+                            <h5>Kripa Pravahinii dharey madhurey</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="item">
+                <div class="view overlay hm-blue-slight">
+                    <a><img src="images/carousel4.jpg" class="img-responsive" alt="Chania">
+                        <div class="mask waves-effect waves-light"></div>
+                    </a>
+                    <div class="carousel-caption hidden-xs">
+                        <div class="animated fadeInDown">
+                            <h5>Shive sree raja rajesjhwarye nama:</h5>
                         </div>
                     </div>
                 </div>
@@ -123,9 +144,9 @@
     <br><br>
     <section class="parallax wow fadeInUp" id="historydiv">
         <div class="container text-center">
-            <h2 style="color: black;">DEVI</h2>
+            <h2>DEVI</h2>
             <h5>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book</h5>
-            <button type="button" class="btn btn-link" data-target="#historyModal" data-toggle="modal">Read More</button>
+            <button type="button" class="btn btn-link" data-target="#historyModal" data-toggle="modal" style="color: white;">Read More</button>
         </div>
         <div class="modal fade" id="historyModal" role="dialog">
             <div class="modal-dialog modal-lg">
