--- a/app/src/poojas/views/poojas.html
+++ b/app/src/poojas/views/poojas.html
@@ -1,7 +1,7 @@
 <style>
     #pooja-div-1{
-        background-image: url(images/sreechakram.jpg);
-        min-height: 400px;
+        background-image: url(images/poojas/p7.jpg);
+        min-height: 600px;
         max-width: 100%;
     }
     #pooja-div-2{
