--- a/app/src/contact/views/contact.html
+++ b/app/src/contact/views/contact.html
@@ -1,5 +1,47 @@
+<style>
+    #map {
+        width: 500px;
+        height: 400px;
+    }
+    .people-div{
+        height: auto;
+        min-height: 200px;
+        background-color: whitesmoke;
+    }
+</style>
 <div>
-    Contact page
 
+    <div class="container text-center">
+        <div class="row">
+            <br>
+            <div class="col-md-6 col-sm-12 col-xs-12">
+                <h4 class="maketextgold">Address</h4>
+                <hr>
+                <address>
+                    <div><i class="maketextgold material-icons">place</i></div>
+                    <p><b>Vadakkekunanth Sree Rajarajeswari devi Temple</b></p>
+                    <p>Vrindavan Nagar, Kadappakada</p>
+                    <p style="color:gray">Kollam 691008</p>
+                    <p style="color:gray">Kerala, India</p>
+                    <br>
+                    <i class="maketextgold material-icons">phone</i>
+                    <p >Office</p>
+                    <a href="tel:04742766667" style="font-size: medium;">0474 2766667</a>
+                    <!--<hr>-->
+                    <!--<p>Governing body<br>Vadakkekunnath Sree raja rajeswari trust</p>-->
+                </address>
+            </div>
+            <div class="col-md-6 col-sm-12 col-xs-12">
+                <h4 class="maketextgold">Get directions</h4>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3941.8202006123133!2d76.60282731478561!3d8.896302293612974!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b05fcfc97ace973%3A0xfecce50fba421b59!2sVadakkekunnath+Sree+Raja+Rajeshwari+Kshethram%2C+Kadapakkada%2C+Kollam%2C+Kerala+691008!5e0!3m2!1sen!2sin!4v1455882498368" width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
+            </div>
+        </div>
+        <br>
 
+    </div>
+    <div class="row">
+        <div class="people-div container-fluid">
+
+        </div>
+    </div>
 </div>
