yagam page started.

--- a/app/src/home/views/home.html
+++ b/app/src/home/views/home.html
@@ -6,8 +6,12 @@
     .item img{
         height: 300px !important;
         width: 100%;
-        -webkit-filter: brightness(30%);
-        filter: brightness(30%);
+        -webkit-filter: brightness(80%);
+        filter: brightness(80%);
+    }
+    .item h5{
+        text-shadow: 2px 2px black;
+        font-weight: bold;
     }
 
     .carousel-control i{
