--- a/app/src/yagam/views/yagam.html
+++ b/app/src/yagam/views/yagam.html
@@ -1,6 +1,80 @@
-<div>
-    yagam page
-    <span>{{pageData}}</span>
+<style>
+    .yagam-div-1{
+        height: 400px;
+        background-image: url('images/yagam/yagam1.jpg');
+    }
+    .yagam-div-1 h4,p{
+        color:white;
+        margin-top: 5%;
+        font-weight: 400;
+    }
+    .date-box{
+        height: 100px;
+        width: 100px;
+        border-radius:5px;
+        background-color: dodgerblue;
+    }
+    .date-box{
+        display: flex;
+        align-items: center;
+        color: white;
+    }
+    .date-box p{
+        display: block;
+        position: relative;
+    }
+    address span{
+        color:black;
+        line-height: 1;
+    }
+    .yagam-div-3{
+        height: 400px;
+        background-color: rgb(11, 131, 167);
+    }
+</style>
 
+<div class="container-fluid yagam-div-1 wow slideInUp">
+    <div class="container text-center ">
+        <h4 style="line-height: 0.1;">SREE  MAHAGAYATHREEYAGAM</h4>
+        <span style="color:lightgrey;font-size: small; line-height: 1;">Conducted By Vadakkekunnathu Sree Raja Rajeswari Devi Trust</span><br>
+        <span style="color:lightgrey;font-size: small; line-height: 1;">On behalf of, Sree Mookambika Mission Charitable Trust, India</span>
+        <p style="text-shadow: 2px 2px black;">orem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting</p>
+    </div>
 </div>
 
+<div class="container-fluid yagam-div-2 wow slideInUp">
+    <div class="container text-center">
+
+        <div class="row text-center">
+            <div class="container">
+                <div class="col-md-4" style="margin-top:30px;">
+                    <p class="maketextgold">Venue</p>
+                    <address>
+                        <span><b>Vadakkekunanthu Sree Rajarajeswari Devi Temple</b></span><br>
+                        <span>Vrindavan Nagar, Kadappakada</span><br>
+                        <span style="color:gray">Kollam 691008</span><br>
+                        <span style="color:gray">Kerala, India</span><br>
+                        <span>click <a ui-sref="contact">here</a> for more contact info</span>
+                    </address>
+                </div>
+                <h5>Dates</h5>
+                <hr>
+                <div ng-repeat="date in yagamDates" style="margin:2%" class="text-center col-xs-12 col-sm-6 col-md-1 col-lg-1">
+                    <div class="date-box container text-center wow fadeInUp hoverable">
+                        <div class="container text-center">
+                            <span>April</span>
+                            <span style="font-size: 40px;">{{date}}</span>
+                            <span>2016</span>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<div class="row container-fluid yagam-div-3">
+
+        </div>
