--- a/app/src/yagam/views/yagam.html
+++ b/app/src/yagam/views/yagam.html
@@ -35,9 +35,9 @@
 
 <div class="container-fluid yagam-div-1 wow slideInUp">
     <div class="container text-center ">
-        <h4 style="line-height: 0.1;">SREE  MAHAGAYATHREEYAGAM</h4>
-        <span style="color:lightgrey;font-size: small; line-height: 1;">Conducted By Vadakkekunnathu Sree Raja Rajeswari Devi Trust</span><br>
-        <span style="color:lightgrey;font-size: small; line-height: 1;">On behalf of, Sree Mookambika Mission Charitable Trust, India</span>
+        <h4>SREE  MAHAGAYATHREE YAGAM</h4>
+        <span style="color:lightgrey;font-size: small;">Conducted By Vadakkekunnathu Sree Raja Rajeswari Devi Trust</span><br>
+        <span style="color:lightgrey;font-size: small;">On behalf of, Sree Mookambika Mission Charitable Trust, India</span>
         <p style="text-shadow: 2px 2px black;">orem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting</p>
     </div>
 </div>
@@ -59,7 +59,7 @@
                 </div>
                 <h5>Dates</h5>
                 <hr>
-                <div ng-repeat="date in yagamDates" style="margin:2%" class="text-center col-xs-12 col-sm-6 col-md-1 col-lg-1">
+                <div ng-repeat="date in yagamDates" style="margin:2%" class="text-center col-xs-12 col-sm-1 col-md-1 col-lg-1">
                     <div class="date-box container text-center wow fadeInUp hoverable">
                         <div class="container text-center">
                             <span>April</span>
